Margin imageOne to correctalignment

--- a/mainCSS.css
+++ b/mainCSS.css
@@ -84,7 +84,6 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: solid black;
 }
 
 .infoTwo {
